--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -9,18 +9,13 @@
 	
 	<groupId>com.markmurfin.com.markmurfin.chat</groupId>
 	<artifactId>cli</artifactId>
-
-	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-	</properties>
 	
 	<dependencies>
 	
 		<dependency>
 			<groupId>com.markmurfin.com.markmurfin.chat</groupId>
 			<artifactId>core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
