--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
 	<modules>
 		<module>cli</module>
 		<module>core</module>
+		<module>api</module>
 	</modules>
+
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 	
 	<dependencies>
 		
